fix: brighter background for instructions

--- a/themes/atlantis/login/resources/css/login.css
+++ b/themes/atlantis/login/resources/css/login.css
@@ -47,6 +47,8 @@ textarea.pf-c-form-control {
 
 p.instruction {
     margin: 5px 0;
+    background: aliceblue;
+    padding: 20px;
 }
 
 .pf-c-button.pf-m-primary {
