fix: expand pass style to new & confirm

--- a/themes/atlantis/login/resources/css/login.css
+++ b/themes/atlantis/login/resources/css/login.css
@@ -81,7 +81,7 @@ p.instruction {
     --pf-c-button--after--BorderColor: black;
 }
 
-input#password {
+input#password, input#password-new, input#password-confirm {
     width: 80%;
 }
 
