--- a/themes/atlantis/login/resources/css/login.css
+++ b/themes/atlantis/login/resources/css/login.css
@@ -5,6 +5,43 @@
     background: none;
 }
 
+.kc-form{
+    padding-top: 10px;
+}
+
+.form-group{
+    font-family: monospace;
+    font-size: 20px;
+    text-shadow: 0 0 BLACK;
+    background: #1b41625e;
+    padding: 2px;
+    padding-left: 10px;
+    padding-right: 50px;
+}
+
+.kc-feedback-text{
+    background: #ff0b0b99;
+    padding: 10px;
+    margin-bottom: 20px;
+    font-size: 10px;
+    border-radius: 5px;
+    color: white;
+    font-family: monospace;
+}
+
+button{
+    background-image: url('https://images.atlantishq.de/m/eye-svgrepo-com.svg') !important;
+    background-size: 100%;
+    height: 25px;
+    width: 25px;
+    background-color: #d7cacabf;
+    line-height: -30px;
+    border-radius: 2px;
+    box-shadow: none;
+    border: 0;
+    padding: 8px;
+}
+
 .login-pf body {
     background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.5)), url("https://images.potaris.de/media/001_squirrle.jpg?x=1920&encoding=webp") no-repeat center center fixed;
     background-size: cover;
@@ -16,6 +53,10 @@
     color: aliceblue;
     border: 2px solid #434c6c57;
     box-shadow: -1px -1px 1px 1px rgba(0,0,0,0.5);
+    line-height: 20px;
+    width: 80%;
+    margin-top: 8px;
+    margin-bottom: 20px;
 }
 
 .pf-c-form-control[aria-invalid=true]{
@@ -229,6 +270,8 @@ div.kc-logo-text span {
 }
 
 #kc-form-options {
+    width: 60%;
+    float: left;
 }
 
 #kc-form-options span {
