--- a/themes/atlantis/login/resources/css/login.css
+++ b/themes/atlantis/login/resources/css/login.css
@@ -99,6 +99,7 @@ p.instruction {
     font-weight: bold;
     padding: 15px;
     max-width: 200px;
+    min-width: 50%;
     box-shadow: 0px 0px 4px 3px rgba(0,0,0,0.5);
 }
 
@@ -541,6 +542,7 @@ ul#kc-totp-supported-apps {
 
 #kc-form-buttons {
     margin-top: 20px;
+    background: none;
 }
 
 .login-pf-page .login-pf-brand {
