--- a/themes/atlantis/login/resources/css/login.css
+++ b/themes/atlantis/login/resources/css/login.css
@@ -25,7 +25,7 @@
     margin-bottom: 20px;
     font-size: 10px;
     border-radius: 5px;
-    color: white;
+    color: white !important;
     font-family: monospace;
     display: block;
 }
